2010-12-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake now support c/c++ header file.
	: set flymake-log-level to 0.

2010-12-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Improve flymake setting.
	Enable global-linum-mode.
	: Add flymake setting for python using pyflakes.

	* init-toolbar.el: Add flymake toolbar.

	* init-basic.el: Add flymake setting.

2010-11-29  Meteor Liu  <meteor1113@gmail.com>

	* Update auto-complete to 1.3.1

	* init-misc.el: Add rainbow-mode.

2010-11-17  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Update cn-weather toolbar item.

2010-11-15  Meteor Liu  <meteor1113@gmail.com>

	* lisp/cn-weather.el: Update cn-weather.

2010-10-18  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add Minor mode and Misc sub menu.
	Update minor mode sub menu.

2010-09-28  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add key description for toolbar help.
	: Add Revert and Change encoding menu.
	(emms-sub-menu): Improve emms menu.

2010-09-27  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add grep and moccur toolbar item.

2010-09-25  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (anything-command-map-prefix-key): anything.

	* init-toolbar.el: Improve remember toolbar setting.
	Disable all separator.

2010-09-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (global-map): Setup dired-x.

	* init-misc.el (require): Add browse-kill-ring.

	* init-toolbar.el: Add comment and format toolbar item.
	Auto save toolbarshow setting.
	Add remember toolbar.

	* Add lisp/w32-browser.el

2010-09-20  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (dired-mode-hook): Add dired+.

2010-09-19  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el ("folding"): Add toggle-hiding toolbar item.
	Add emms toolbar.

	* init-misc.el: Bind double click to change song in emms.

	* init-toolbar.el: Use emms pop menu instead of toolbar item.

2010-09-16  Meteor Liu  <meteor1113@gmail.com>
